# lib/controllers/comment.js
@@ -1,4 +1,5 @@
 const Comment = require("../model/Comment");
+const SubComment = require("../model/SubComment");
 
 module.exports = {
     createComment: async function (req, res, next) {
@@ -49,6 +50,7 @@ module.exports = {
     getCommentByID: async function (req, res, next) {
         /**
          * #swagger.tags = ["Comment"]
+         *  #swagger.summary = 'Buscando um comment por ID'
          */
 
         const _id = req.params;
@@ -63,6 +65,54 @@ module.exports = {
             }
         } catch (error) {
             res.status(500).json({ error });
+        }
+    },
+    addSubComment: async function (req, res, next) {
+        /**
+         * #swagger.tags = ["Comment"]
+         *  #swagger.summary = 'Add um SubComment pelo ID de Comment'
+         * #swagger.parameters['Comment'] = { 
+                in: 'body', 
+                description: 'Esse obj add um SubComment no Comment por ID', 
+                required: true, 
+                schema: { 
+                    profileObjectId: "63703f1de318f3ffa792dde4", 
+                    comment: "Este e um SubComentario" ,
+                    numberOfLikes: 15
+                } 
+            }
+            #swagger.parameters['_id'] = { 
+                in: 'path', 
+                description: 'ID de um Comment', 
+                required: true, 
+            }
+         */
+
+        const _id = req.params;
+
+        try {
+            var resComment = await Comment.findById(_id);
+
+            resComment.comments.push(SubComment(req.body));
+
+            let upgradeComment = await Comment.replaceOne(
+                { _id: _id },
+                resComment
+            );
+
+            if (upgradeComment.modifiedCount == 0) {
+                res.status(404).json({ msg: "SubComment não adicionado!" });
+            } else {
+                res.status(200).json(resComment);
+            }
+        } catch (error) {
+            let msg;
+            let statusCode = 500;
+            if (resComment == null) {
+                msg = "ID do Comment não encontrado!";
+                statusCode = 404;
+            }
+            res.status(statusCode).json({ specificError: msg, error });
         }
     },
 };
