# lib/model/SubComment.js
@@ -1,0 +1,9 @@
+let mongoose = require("mongoose");
+
+var SubComments = mongoose.model("SubComment", {
+    profileObjectId: { type: mongoose.Types.ObjectId, required: true },
+    comment: { type: String, required: true },
+    numberOfLikes: { type: Number, default: 0 },
+});
+
+module.exports = SubComments;
