# lib/routes/comment.js
@@ -5,5 +5,6 @@ const controller = require("../controllers/comment");
 
 router.post("/", controller.createComment);
 router.get("/:_id", controller.getCommentByID);
+router.post("/addSubComment/:_id", controller.addSubComment);
 
 module.exports = router;
